Added Page Visibility descriptions.

--- a/examples/09-page-visibility/page-visibility.html
+++ b/examples/09-page-visibility/page-visibility.html
@@ -20,10 +20,10 @@
             <div class="card">
 
                 <h2>What is the <span class="mono">Visibility API</span>?</h2>
-                <p>XXXXXXXXXXXX</p>
+                <p>Determines if the current browser tab is visible to the user. The page is considered hidden when: the user changes browser tabs, minimizes the browser, or covers the browser with another window.</p>
 
                 <h2>Why should you use the <span class="mono">Visibility API</span>?</h2>
-                <p>XXXXXXXXXXXX</p>
+                <p>If your webpage or app has interactive elements (music, video, game, etc.) or long-running process, you can pause actions when the page is not visible. This can ensure a good user experience or save system resources when your page isn't active.</p>
 
             </div>
 
@@ -31,7 +31,7 @@
 
                 <h2>Demo: update when the page visibility changes</h2>
 
-                <p>XXXXXXXXX</p>
+                <p>Change to a different browser tab and watch this tab's title.</p>
                 
             </div>
 
