Working gameloop in canvas demo.

--- a/examples/02-canvas/canvas.html
+++ b/examples/02-canvas/canvas.html
@@ -34,7 +34,7 @@
 
             <div class="card">
                 <h2>Demo: animate (TODO)</h2>
-                <button type="button" onclick="Demo.CanvasGame.start();">Start Animation</button>
+                <button type="button" onclick="Demo.Canvas.startGame();">Start Game</button>
             </div>
                 
             <div class="card" style="overflow: auto;">
