Added variable speed.

--- a/examples/02-canvas/canvas.html
+++ b/examples/02-canvas/canvas.html
@@ -33,8 +33,9 @@
             </div>
 
             <div class="card">
-                <h2>Demo: animate (TODO)</h2>
+                <h2>Demo: simple game</h2>
                 <button type="button" onclick="Demo.Canvas.startGame();">Start Game</button>
+                <p>Play a simple game with the canvas element. Click to destroy boxes before they reach the bottom of the screen.</p>
             </div>
                 
             <div class="card" style="overflow: auto;">
