Added array cleanup logic.

--- a/examples/02-canvas/canvas.html
+++ b/examples/02-canvas/canvas.html
@@ -30,6 +30,7 @@
             <div class="card">
                 <h2>Demo: drawing primitives</h2>
                 <button type="button" onclick="Demo.Canvas.drawLogo();">Draw Logo</button>
+                <p>Draw the Momentum Dev logo with simple shapes.</p>
             </div>
 
             <div class="card">
