Cleaned up several example introductions.

--- a/examples/01-geolocation/geolocation.html
+++ b/examples/01-geolocation/geolocation.html
@@ -35,9 +35,7 @@
                 <p>Attempts to get a device's location with normal accuracy.</p>
 
                 <button type="button" onclick="Demo.Geolocation.getLocationAccurate();">High Accuracy</button>
-                <p>Attempts to get a device's location with high accuracy. This may trigger the GPS module on a user's device and use considerable resources.</p>
-
-                
+                <p>Attempts to get a device's location with high accuracy. The 'accuracy' value is measured in meters. This may trigger the GPS module on a user's device and use considerable resources.</p>
 
             </div>
 
