--- a/examples/05-vibration/vibration.html
+++ b/examples/05-vibration/vibration.html
@@ -21,7 +21,7 @@
 
                 <h2>What is the <span class="mono">Vibration API</span>?</h2>
                 <p>Vibrate a device using timed patterns. You cannot control the strength of the vibration. Do not overuse vibrations to annoy users or use excessive amounts of energy.</p>
-                <p>Extra-special note: Safari on iOS (and thus all iOS browsers) do not support the Vibration API.</p>
+                <p><strong>Extra-special note</strong>: Safari on iOS (and thus all iOS browsers) do not support the Vibration API.</p>
 
                 <h2>Why should you use the <span class="mono">Vibration API</span>?</h2>
                 <p>Provide haptic feedback when the user interacts with certain elements or interactivity in games.</p>
