--- a/examples/09-page-visibility/page-visibility.html
+++ b/examples/09-page-visibility/page-visibility.html
@@ -11,7 +11,7 @@
     <body>
         
         <header>
-            <h1>XXXXXXXXXXXX</h1>
+            <h1>Page Visibility API</h1>
             <p><a href="../../index.html">Return to Main Menu</a></p>
         </header>
 
