Added card for permission/browser support to all pages.

--- a/examples/07-gamepad/gamepad.html
+++ b/examples/07-gamepad/gamepad.html
@@ -20,11 +20,19 @@
             <div class="card">
 
                 <h2>What is the <span class="mono">Gamepad API</span>?</h2>
-                <p>XXXXXXXXXXXX</p>
+                <p>Allows the browser to read input from an attached gamepad device. This includes USB and Bluetooth devices.</p>
 
                 <h2>Why should you use <span class="mono">Gamepad API</span>?</h2>
-                <p>XXXXXXXXXXXX</p>
+                <p>Beyond the obvious use cases of JavaScript-based games, the Gamepad API allows for alternate interface options for web apps.</p>
 
+            </div>
+
+            <div class="card">
+                <h2>Permission Required?</h2>
+                <p>TODO</p>
+
+                <h2>Supported Browsers</h2>
+                <p><a href="">Supported Browsers on MDN</a></p>
             </div>
 
             <div class="card">
