--- a/examples/02-canvas/canvas.html
+++ b/examples/02-canvas/canvas.html
@@ -28,6 +28,14 @@
             </div>
 
             <div class="card">
+                <h2>Permission Required?</h2>
+                <p>No.</p>
+
+                <h2>Supported Browsers</h2>
+                <p><a href="">Supported Browsers on MDN</a></p>
+            </div>
+
+            <div class="card">
                 <h2>Demo: drawing primitives</h2>
                 <button type="button" onclick="Demo.Canvas.drawLogo();">Draw Logo</button>
                 <p>Draw the Momentum Dev logo with simple shapes.</p>
