--- a/examples/03-notifications/notifications.html
+++ b/examples/03-notifications/notifications.html
@@ -26,6 +26,14 @@
             </div>
 
             <div class="card">
+                <h2>Permission Required?</h2>
+                <p>Yes, explicit user permission required.</p>
+
+                <h2>Supported Browsers</h2>
+                <p><a href="">Supported Browsers on MDN</a></p>
+            </div>
+
+            <div class="card">
                 
                 <h2>Demo: notification permission</h2>
 
