--- a/examples/04-webworkers/webworkers.html
+++ b/examples/04-webworkers/webworkers.html
@@ -28,6 +28,14 @@
             </div>
 
             <div class="card">
+                <h2>Permission Required?</h2>
+                <p>No.</p>
+
+                <h2>Supported Browsers</h2>
+                <p><a href="">Supported Browsers on MDN</a></p>
+            </div>
+
+            <div class="card">
 
                 <h2>Demo: pass messages to/from a Web Worker</h2>
 
