--- a/examples/06-idle-detection/idle.html
+++ b/examples/06-idle-detection/idle.html
@@ -29,6 +29,14 @@
             </div>
 
             <div class="card">
+                <h2>Permission Required?</h2>
+                <p>Yes, explicit user permission required.</p>
+
+                <h2>Supported Browsers</h2>
+                <p><a href="">Supported Browsers on MDN</a></p>
+            </div>
+
+            <div class="card">
 
                 <h2>Demo: request permission</h2>
 
