--- a/examples/08-inking/inking.html
+++ b/examples/08-inking/inking.html
@@ -28,6 +28,14 @@
             </div>
 
             <div class="card">
+                <h2>Permission Required?</h2>
+                <p>TODO</p>
+
+                <h2>Supported Browsers</h2>
+                <p><a href="">Supported Browsers on MDN</a></p>
+            </div>
+
+            <div class="card">
 
                 <h2>Demo: </h2>
 
