--- a/examples/08-inking/inking.html
+++ b/examples/08-inking/inking.html
@@ -11,7 +11,7 @@
     <body>
         
         <header>
-            <h1>XXXXXXXXXXXX</h1>
+            <h1>Ink API</h1>
             <p><a href="../../index.html">Return to Main Menu</a></p>
         </header>
 
@@ -19,11 +19,11 @@
 
             <div class="card">
 
-                <h2>What is the <span class="mono">Inking API</span>?</h2>
-                <p>XXXXXXXXXXXX</p>
+                <h2>What is the <span class="mono">Ink API</span>?</h2>
+                <p>Stylus, click, and touch events are normally captured via the browser JavaScript event loop. The Ink API is a performance-focused option that interfaces directly with the operating system's compositing layers. This ensures smooth, high-performance pen capture in a JavaScript application.</p>
 
-                <h2>Why should you use the <span class="mono">Inking API</span>?</h2>
-                <p>XXXXXXXXXXXX</p>
+                <h2>Why should you use the <span class="mono">Ink API</span>?</h2>
+                <p>Use the Ink API to capture smooth pen or touch input from a user's device.</p>
 
             </div>
 
