Added specific file names for newer concepts.

--- a/examples/11-background-fetch-api/background-fetch.html
+++ b/examples/11-background-fetch-api/background-fetch.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <script type="text/javascript" src="../base/demo.js"></script>
-        <script type="text/javascript" src="XXXXXXXXXXXX.js"></script>
+        <script type="text/javascript" src="background-fetch.js"></script>
     </head>
 
     <body>
