--- a/examples/13-storage-api/storage.html
+++ b/examples/13-storage-api/storage.html
@@ -1,11 +1,11 @@
-<html>
+storage<html>
     <head>
         <title>JavaScript Does THAT!? Examples</title>
         <link href="../base/main.css" type="text/css" rel="stylesheet" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <script type="text/javascript" src="../base/demo.js"></script>
-        <script type="text/javascript" src="XXXXXXXXXXXX.js"></script>
+        <script type="text/javascript" src="storage.js"></script>
     </head>
 
     <body>
