Added Clipboard to index page.

--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
             </div>
 
             <div class="card">
+                <h2><a href="examples/02-clipboard/clipboard.html">Clipboard</a></h2>
+                <p>Copy &amp; paste content to the OS clipboard via JavaScript.</p>
+            </div>
+
+            <div class="card">
                 <h2><a href="examples/02-canvas/canvas.html">Canvas</a></h2>
                 <p>Provides primitive 2D and 3D drawing capabilities.</p>
             </div>
