Updated initial description and demo moments of fetch.

--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
             </div>
 
             <div class="card">
+                <h2><a href="examples/03-fetch/fetch.html">Fetch</a></h2>
+                <p>Get and send data/content from remote servers.</p>
+            </div>
+
+            <div class="card">
                 <h2><a href="examples/02-canvas/canvas.html">Canvas</a></h2>
                 <p>Provides primitive 2D and 3D drawing capabilities.</p>
             </div>
