Stubbed out IndexDB demo.

--- a/examples/13-indexdb/indexdb.html
+++ b/examples/13-indexdb/indexdb.html
@@ -1,11 +1,11 @@
-<html>
+storage<html>
     <head>
         <title>JavaScript Does THAT!? Examples</title>
         <link href="../base/main.css" type="text/css" rel="stylesheet" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <script type="text/javascript" src="../base/demo.js"></script>
-        <script type="text/javascript" src="XXXXXXXXXXXX.js"></script>
+        <script type="text/javascript" src="indexdb.js"></script>
     </head>
 
     <body>
@@ -19,28 +19,28 @@
 
             <div class="card">
 
-                <h2>What is the <span class="mono">XXXXXXXXXXXX</span>?</h2>
-                <p>XXXXXXXXXXXX</p>
+                <h2>What is the <span class="mono">IndexDB API</span>?</h2>
+                <p>IndexedDB provide a transactional database for storing large amounts of structured data on the client.</p>
 
-                <h2>Why should you use the <span class="mono">XXXXXXXXXXXX</span>?</h2>
-                <p>XXXXXXXXXXXX</p>
+                <h2>Why should you use the <span class="mono">IndexDB API</span>?</h2>
+                <p>Web storage solutions like <code>localStorage</code> and <code>sessionStorage</code> are limited to handling small amounts of simple key/pair data (currently 5MB per origin). IndexDB provides multiple gigabytes of storage, depending on the browser implementation.</p>
 
             </div>
 
             <div class="card">
                 <h2>Permission Required?</h2>
-                <p>Yes, explicit user permission required.</p>
+                <p>No.</p>
 
                 <h2>Supported Browsers</h2>
                 <p><a href="">Supported Browsers on MDN</a></p>
             </div>
-
+            
             <div class="card">
 
-                <h2>Demo: </h2>
+                <h2>Demo: store data in a database</h2>
 
                 <button type="button" onclick="">DEMO_ACTION</button>
-                <p>DESCRIPTION</p>
+                <p>Stores several complex JavaScript objects in an indexed database.</p>
                 
             </div>
 
