--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
             <div class="card">
                 <h2><a href="examples/05-vibration/vibration.html">Vibration API</a></h2>
-                <p>DESCRIPTION</p>
+                <p>Vibrate a device using timed patterns.</p>
             </div>
 
             <div class="card">
@@ -61,16 +61,24 @@
             </div>
 
             <div class="card">
-                <h2><a href="examples/08-inking/inking.html">Inking</a></h2>
-                <p>DESCRIPTION</p>
-            </div>
-
-            <div class="card">
                 <h2><a href="examples/09-page-visibility/page-visibility.html">Page Visibility</a></h2>
                 <p>DESCRIPTION</p>
             </div>
 
+            <div class="card">
+                <h2><a href="examples/08-inking/background-fetch.html">Background Fetch API</a></h2>
+                <p>DESCRIPTION</p>
+            </div>
 
+            <div class="card">
+                <h2><a href="examples/08-inking/inking.html">Filesystem API</a></h2>
+                <p>DESCRIPTION</p>
+            </div>
+
+            <div class="card">
+                <h2><a href="examples/08-inking/inking.html">IndexDB API</a></h2>
+                <p>DESCRIPTION</p>
+            </div>
 
 
 
