Stubbed out File System API. Fixed some other links.

--- a/index.html
+++ b/index.html
@@ -66,13 +66,13 @@
             </div>
 
             <div class="card">
-                <h2><a href="examples/08-inking/background-fetch.html">Background Fetch API</a></h2>
+                <h2><a href="examples/11-background-fetch/background-fetch.html">Background Fetch API</a></h2>
                 <p>DESCRIPTION</p>
             </div>
 
             <div class="card">
-                <h2><a href="examples/08-inking/inking.html">Filesystem API</a></h2>
-                <p>DESCRIPTION</p>
+                <h2><a href="examples/12-filesystem/filesystem.html">File System API</a></h2>
+                <p>Provides access to read and write files on the local system.</p>
             </div>
 
             <div class="card">
