Description and label updates.

--- a/examples/03-fetch/fetch.html
+++ b/examples/03-fetch/fetch.html
@@ -31,7 +31,7 @@
                 <h2>Permission Required?</h2>
                 <p>No.</p>
 
-                <h2>Supported Browsers</h2>
+                <h2>Browser Support</h2>
                 <p><a href="">Supported Browsers on MDN</a></p>
             </div>
 
