--- a/examples/05-notifications/notifications.html
+++ b/examples/05-notifications/notifications.html
@@ -20,6 +20,7 @@
             <div class="card">
                 <h2>What is the <span class="mono">Notifications API</span>?</h2>
                 <p>Send browser- and device-native notifications from a website or webapp.</p>
+                <p>NOTE: this is the client-side only notification API. This differs from the <code>Push API</code>, which provides server-based push notifications to a JavaScript application.</p>
 
                 <h2>When and why should you use the <span class="mono">Notifications API</span>?</h2>
                 <p>Notifications inform users of updates from your website - whether informational or transactional. Note that notifications require explicit opt-in from the user; a user is more likely to grant permission when they understand the value of why you want to send notifications.</p>
@@ -29,7 +30,7 @@
                 <h2>Permission Required?</h2>
                 <p>Yes, explicit user permission required.</p>
 
-                <h2>Supported Browsers</h2>
+                <h2>Browser Support</h2>
                 <p><a href="">Supported Browsers on MDN</a></p>
             </div>
 
