--- a/examples/12-filesystem/filesystem.html
+++ b/examples/12-filesystem/filesystem.html
@@ -31,9 +31,9 @@
 
             <div class="card">
                 <h2>Permission Required?</h2>
-                <p>Surprisingly, no.</p>
+                <p>No.</p>
 
-                <h2>Supported Browsers</h2>
+                <h2>Browser Support</h2>
                 <p><a href="">Supported Browsers on MDN</a></p>
             </div>
 
