--- a/examples/01-geolocation/geolocation.html
+++ b/examples/01-geolocation/geolocation.html
@@ -31,7 +31,7 @@
                 <h2>Permission Required?</h2>
                 <p>Yes, explicit user permission required.</p>
 
-                <h2>Browser Support</h2>
+                <h2>Browser Support: <span class="green">CHECK</span></h2>
                 <p><a href="">Supported Browsers on MDN</a></p>
             </div>
 
