Added Background Fetch details. Added new format for browser support. Added icons.

--- a/examples/01-geolocation/geolocation.html
+++ b/examples/01-geolocation/geolocation.html
@@ -31,8 +31,8 @@
                 <h2>Permission Required?</h2>
                 <p>Yes, explicit user permission required.</p>
 
-                <h2>Browser Support: <span class="green">CHECK</span></h2>
-                <p><a href="">Supported Browsers on MDN</a></p>
+                <h2>Browser Support</h2>
+                <p class="browser-support"><img src="../base/icons/good.svg" alt="Good browser support." /><span>Good</span> - <a href="">Supported Browsers on MDN</a></p>
             </div>
 
             <div class="card">
