--- a/examples/02-clipboard/clipboard.html
+++ b/examples/02-clipboard/clipboard.html
@@ -32,7 +32,7 @@
                 <p>Yes, explicit user permission required when pasting.</p>
 
                 <h2>Browser Support</h2>
-                <p><a href="">Supported Browsers on MDN</a></p>
+                <p class="browser-support"><img src="../base/icons/good.svg" alt="Good browser support." /><span>Good</span> - <a href="https://developer.mozilla.org/en-US/docs/Web/API/Clipboard#browser_compatibility" target="_blank">Supported Browsers on MDN</a></p>
             </div>
 
             <div class="card">
