--- a/examples/11-background-fetch/background-fetch.html
+++ b/examples/11-background-fetch/background-fetch.html
@@ -20,19 +20,19 @@
             <div class="card">
 
                 <h2>What is the <span class="mono">Background Fetch API</span>?</h2>
-                <p>XXXXXX</p>
+                <p>Allows large or long-running downloads to run in the background. A service worker is used to handle download completion functionality.</p>
 
-                <h2>Why should you use the <span class="mono">XXXXXXXXXXXX</span>?</h2>
-                <p>XXXXXXXXXXXX</p>
+                <h2>Why should you use the <span class="mono">Background Fetch API</span>?</h2>
+                <p>Large downloads can be handled in a programmatic and non-interfering way. Downloads are automatically paused when connectivity is lost and resumed when connectivity is regained, simplifying download management.</p>
 
             </div>
 
             <div class="card">
 
-                <h2>Demo: </h2>
+                <h2>Demo: download several files in the background</h2>
 
-                <button type="button" onclick="">DEMO_ACTION</button>
-                <p>DESCRIPTION</p>
+                <button type="button" onclick="Demo.BackgroundFetch.downloadFiles()">Download Files</button>
+                <p>Download several files and notify when they are done.</p>
                 
             </div>
 
