--- a/examples/00-DEFAULT/index.html
+++ b/examples/00-DEFAULT/index.html
@@ -31,7 +31,7 @@
                 <h2>Permission Required?</h2>
                 <p>Yes, explicit user permission required.</p>
 
-                <h2>Browser Support</h2>
+                <h2>Supported Browsers</h2>
                 <p><a href="">Supported Browsers on MDN</a></p>
             </div>
 
