--- a/examples/00-DEFAULT/index.html
+++ b/examples/00-DEFAULT/index.html
@@ -29,10 +29,12 @@
 
             <div class="card">
                 <h2>Permission Required?</h2>
-                <p>Yes, explicit user permission required.</p>
+                <p>XXXXX</p>
 
-                <h2>Supported Browsers</h2>
-                <p><a href="">Supported Browsers on MDN</a></p>
+                <h2>Browser Support</h2>
+                <p class="browser-support"><img src="../base/icons/good.svg" alt="Good browser support." /><span>Good</span> - <a href="" target="_blank">Supported Browsers on MDN</a></p>
+                <p class="browser-support"><img src="../base/icons/caution.svg" alt="Some browser support." /><span>Not widely supported</span> - <a href="" target="_blank">Supported Browsers on MDN</a></p>
+                <p class="browser-support"><img src="../base/icons/bad.svg" alt="Poor browser support." /><span>Poor</span> - <a href="" target="_blank">Supported Browsers on MDN</a></p>
             </div>
 
             <div class="card">
