Notification browser support.

--- a/examples/00-DEFAULT/index.html
+++ b/examples/00-DEFAULT/index.html
@@ -33,7 +33,7 @@
 
                 <h2>Browser Support</h2>
                 <p class="browser-support"><img src="../base/icons/good.svg" alt="Good browser support." /><span>Good</span> - <a href="" target="_blank">Supported Browsers on MDN</a></p>
-                <p class="browser-support"><img src="../base/icons/caution.svg" alt="Some browser support." /><span>Not widely supported</span> - <a href="" target="_blank">Supported Browsers on MDN</a></p>
+                <p class="browser-support"><img src="../base/icons/caution.svg" alt="Some browser support." /><span>Somewhat supported</span> - <a href="" target="_blank">Supported Browsers on MDN</a></p>
                 <p class="browser-support"><img src="../base/icons/bad.svg" alt="Poor browser support." /><span>Poor</span> - <a href="" target="_blank">Supported Browsers on MDN</a></p>
             </div>
 
