Added browser compatibility info to several topics.

--- a/examples/08-idle-detection/idle.html
+++ b/examples/08-idle-detection/idle.html
@@ -33,7 +33,7 @@
                 <p>Yes, explicit user permission required.</p>
 
                 <h2>Browser Support</h2>
-                <p><a href="">Supported Browsers on MDN</a></p>
+                <p class="browser-support"><img src="../base/icons/caution.svg" alt="Some browser support." /><span>Somewhat supported</span> - <a href="https://developer.mozilla.org/en-US/docs/Web/API/Vibration_API#browser_compatibility" target="_blank">Supported Browsers on MDN</a></p>
             </div>
 
             <div class="card">
