--- a/examples/07-vibration/vibration.html
+++ b/examples/07-vibration/vibration.html
@@ -30,10 +30,10 @@
 
             <div class="card">
                 <h2>Permission Required?</h2>
-                <p>TODO</p>
+                <p>No.</p>
 
                 <h2>Browser Support</h2>
-                <p><a href="">Supported Browsers on MDN</a></p>
+                <p class="browser-support"><img src="../base/icons/caution.svg" alt="Some browser support." /><span>Somewhat supported</span> - <a href="https://developer.mozilla.org/en-US/docs/Web/API/Vibration_API#browser_compatibility" target="_blank">Supported Browsers on MDN</a></p>
             </div>
 
             <div class="card">
