--- a/examples/09-gamepad/gamepad.html
+++ b/examples/09-gamepad/gamepad.html
@@ -29,10 +29,10 @@
 
             <div class="card">
                 <h2>Permission Required?</h2>
-                <p>TODO</p>
+                <p>No.</p>
 
                 <h2>Browser Support</h2>
-                <p><a href="">Supported Browsers on MDN</a></p>
+                <p class="browser-support"><img src="../base/icons/good.svg" alt="Good browser support." /><span>Good</span> - <a href="https://developer.mozilla.org/en-US/docs/Web/API/Gamepad_API#browser_compatibility" target="_blank">Supported Browsers on MDN</a></p>
             </div>
 
             <div class="card">
