--- a/examples/10-page-visibility/page-visibility.html
+++ b/examples/10-page-visibility/page-visibility.html
@@ -32,9 +32,8 @@
                 <p>Yes, explicit user permission required.</p>
 
                 <h2>Browser Support</h2>
-                <p><a href="">Supported Browsers on MDN</a></p>
+                <p class="browser-support"><img src="../base/icons/bad.svg" alt="Poor browser support." /><span>Poor</span> - <a href="https://developer.mozilla.org/en-US/docs/Web/API/Idle_Detection_API#browser_compatibility" target="_blank">Supported Browsers on MDN</a></p>
             </div>
-
             <div class="card">
 
                 <h2>Demo: update when the page visibility changes</h2>
