Added FontAwesome and icons. Fixed titles on all pages.

--- a/examples/02-clipboard/clipboard.html
+++ b/examples/02-clipboard/clipboard.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>JavaScript Does THAT!? Examples</title>
+        <title>Clipboard API - JavaScript Does THAT!? Examples</title>
         <link href="../base/main.css" type="text/css" rel="stylesheet" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
