--- a/examples/07-vibration/vibration.html
+++ b/examples/07-vibration/vibration.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>JavaScript Does THAT!? Examples</title>
+        <title>Vibration API - JavaScript Does THAT!? Examples</title>
         <link href="../base/main.css" type="text/css" rel="stylesheet" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -11,7 +11,7 @@
     <body>
         
         <header>
-            <h1>Web Workers</h1>
+            <h1>Vibration API</h1>
             <p><a href="../../index.html">Return to Main Menu</a></p>
         </header>
 
