--- a/examples/10-page-visibility/page-visibility.html
+++ b/examples/10-page-visibility/page-visibility.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>JavaScript Does THAT!? Examples</title>
+        <title>Page Visibility API - JavaScript Does THAT!? Examples</title>
         <link href="../base/main.css" type="text/css" rel="stylesheet" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -34,6 +34,7 @@
                 <h2>Browser Support</h2>
                 <p class="browser-support"><img src="../base/icons/bad.svg" alt="Poor browser support." /><span>Poor</span> - <a href="https://developer.mozilla.org/en-US/docs/Web/API/Idle_Detection_API#browser_compatibility" target="_blank">Supported Browsers on MDN</a></p>
             </div>
+            
             <div class="card">
 
                 <h2>Demo: update when the page visibility changes</h2>
