--- a/examples/13-indexdb/indexdb.html
+++ b/examples/13-indexdb/indexdb.html
@@ -1,6 +1,6 @@
 storage<html>
     <head>
-        <title>JavaScript Does THAT!? Examples</title>
+        <title>IndexedDB API - JavaScript Does THAT!? Examples</title>
         <link href="../base/main.css" type="text/css" rel="stylesheet" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -11,7 +11,7 @@ storage<html>
     <body>
         
         <header>
-            <h1>XXXXXXXXXXXX</h1>
+            <h1>IndexedDB API</h1>
             <p><a href="../../index.html">Return to Main Menu</a></p>
         </header>
 
@@ -19,7 +19,7 @@ storage<html>
 
             <div class="card">
 
-                <h2>What is the <span class="mono">IndexDB API</span>?</h2>
+                <h2>What is the <span class="mono">IndexedDB API</span>?</h2>
                 <p>IndexedDB provide a transactional database for storing large amounts of structured data on the client.</p>
 
                 <h2>Why should you use the <span class="mono">IndexDB API</span>?</h2>
