--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
     <head>
         <title>JavaScript Does THAT!? Examples</title>
         <link href="examples/base/main.css" type="text/css" rel="stylesheet" />
+        <link href="examples/base/fontawesome.min.css" type="text/css" rel="stylesheet" />
     </head>
 
     <body>
@@ -16,67 +17,67 @@
         <div class="content">
 
             <div class="card">
-                <h2><a href="examples/01-geolocation/geolocation.html">Geolocation</a></h2>
+                <h2><a href="examples/01-geolocation/geolocation.html"><i class="fa fa-globe" aria-hidden="true"></i> Geolocation</a></h2>
                 <p>Gets the current device's latitude/longitude coordinates.</p>
             </div>
 
             <div class="card">
-                <h2><a href="examples/02-clipboard/clipboard.html">Clipboard</a></h2>
+                <h2><a href="examples/02-clipboard/clipboard.html"><i class="fa fa-clipboard" aria-hidden="true"></i> Clipboard API</a></h2>
                 <p>Copy &amp; paste content to the OS clipboard via JavaScript.</p>
             </div>
 
             <div class="card">
-                <h2><a href="examples/03-fetch/fetch.html">Fetch</a></h2>
+                <h2><a href="examples/03-fetch/fetch.html"><i class="fa fa-arrow-circle-down" aria-hidden="true"></i> Fetch API</a></h2>
                 <p>Get and send data/content from remote servers.</p>
             </div>
 
             <div class="card">
-                <h2><a href="examples/04-canvas/canvas.html">Canvas</a></h2>
+                <h2><a href="examples/04-canvas/canvas.html"><i class="fa fa-pencil-square" aria-hidden="true"></i> Canvas</a></h2>
                 <p>Provides primitive 2D and 3D drawing capabilities.</p>
             </div>
             
             <div class="card">
-                <h2><a href="examples/05-notifications/notifications.html">Notifications</a></h2>
+                <h2><a href="examples/05-notifications/notifications.html"><i class="fa fa-bell" aria-hidden="true"></i> Notifications</a></h2>
                 <p>Send browser- and device-native notifications from a website or webapp.</p>
             </div>
 
             <div class="card">
-                <h2><a href="examples/04-webworkers/webworkers.html">Web Workers</a></h2>
+                <h2><a href="examples/06-webworkers/webworkers.html"><i class="fa fa-cogs" aria-hidden="true"></i> Web Workers</a></h2>
                 <p>Provides background thread execution of JavaScript (in a separate file).</p>
             </div>
 
             <div class="card">
-                <h2><a href="examples/05-vibration/vibration.html">Vibration API</a></h2>
+                <h2><a href="examples/07-vibration/vibration.html"><i class="fa fa-mobile" aria-hidden="true"></i> Vibration API</a></h2>
                 <p>Vibrate a device using timed patterns.</p>
             </div>
 
             <div class="card">
-                <h2><a href="examples/06-idle-detection/idle.html">Idle Detection API</a></h2>
+                <h2><a href="examples/08-idle-detection/idle.html"><i class="fa fa-search" aria-hidden="true"></i> Idle Detection API</a></h2>
                 <p>Determines if a user is active or idle on a webpage.</p>
             </div>
 
             <div class="card">
-                <h2><a href="examples/07-gamepad/gamepad.html">Gamepad API</a></h2>
+                <h2><a href="examples/09-gamepad/gamepad.html"><i class="fa fa-gamepad" aria-hidden="true"></i> Gamepad API</a></h2>
                 <p>DESCRIPTION</p>
             </div>
 
             <div class="card">
-                <h2><a href="examples/09-page-visibility/page-visibility.html">Page Visibility</a></h2>
+                <h2><a href="examples/10-page-visibility/page-visibility.html"><i class="fa fa-eye" aria-hidden="true"></i> Page Visibility</a></h2>
                 <p>DESCRIPTION</p>
             </div>
 
             <div class="card">
-                <h2><a href="examples/11-background-fetch/background-fetch.html">Background Fetch API</a></h2>
+                <h2><a href="examples/11-background-fetch/background-fetch.html"><i class="fa fa-download" aria-hidden="true"></i> Background Fetch API</a></h2>
                 <p>DESCRIPTION</p>
             </div>
 
             <div class="card">
-                <h2><a href="examples/12-filesystem/filesystem.html">File System API</a></h2>
+                <h2><a href="examples/12-filesystem/filesystem.html"><i class="fa fa-desktop" aria-hidden="true"></i> File System API</a></h2>
                 <p>Provides access to read and write files on the local system.</p>
             </div>
 
             <div class="card">
-                <h2><a href="examples/08-inking/inking.html">IndexDB API</a></h2>
+                <h2><a href="examples/13-indexdb/indexdb.html"><i class="fa fa-database" aria-hidden="true"></i> IndexDB API</a></h2>
                 <p>DESCRIPTION</p>
             </div>
 
