--- a/examples/13-indexdb/indexdb.html
+++ b/examples/13-indexdb/indexdb.html
@@ -23,7 +23,7 @@ storage<html>
                 <p>IndexedDB provide a transactional database for storing large amounts of structured data on the client.</p>
 
                 <h2>Why should you use the <span class="mono">IndexDB API</span>?</h2>
-                <p>Web storage solutions like <code>localStorage</code> and <code>sessionStorage</code> are limited to handling small amounts of simple key/pair data (currently 5MB per origin). IndexDB provides multiple gigabytes of storage, depending on the browser implementation.</p>
+                <p>Client-side storage solutions like <code>localStorage</code> and <code>sessionStorage</code> are limited to handling small amounts of simple key/pair data (usually 5MB per origin). IndexDB provides multiple gigabytes of storage, depending on the browser implementation.</p>
 
             </div>
 
@@ -32,7 +32,7 @@ storage<html>
                 <p>No.</p>
 
                 <h2>Browser Support</h2>
-                <p><a href="">Supported Browsers on MDN</a></p>
+                <p class="browser-support"><img src="../base/icons/good.svg" alt="Good browser support." /><span>Good</span> - <a href="https://caniuse.com/indexeddb" target="_blank">Supported Browsers on CanIUse</a></p>
             </div>
             
             <div class="card">
