Added desriptions to all topics on index.html.

--- a/examples/13-indexdb/indexdb.html
+++ b/examples/13-indexdb/indexdb.html
@@ -20,7 +20,7 @@ storage<html>
             <div class="card">
 
                 <h2>What is the <span class="mono">IndexedDB API</span>?</h2>
-                <p>IndexedDB provide a transactional database for storing large amounts of structured data on the client.</p>
+                <p>IndexedDB provides a transactional database for storing large amounts of structured data on the client.</p>
 
                 <h2>Why should you use the <span class="mono">IndexDB API</span>?</h2>
                 <p>Client-side storage solutions like <code>localStorage</code> and <code>sessionStorage</code> are limited to handling small amounts of simple key/pair data (usually 5MB per origin). IndexDB provides multiple gigabytes of storage, depending on the browser implementation.</p>
