--- a/index.html
+++ b/index.html
@@ -58,17 +58,17 @@
 
             <div class="card">
                 <h2><a href="examples/09-gamepad/gamepad.html"><i class="fa fa-gamepad" aria-hidden="true"></i> Gamepad API</a></h2>
-                <p>DESCRIPTION</p>
+                <p>Allows the browser to read input from an attached gamepad device.</p>
             </div>
 
             <div class="card">
                 <h2><a href="examples/10-page-visibility/page-visibility.html"><i class="fa fa-eye" aria-hidden="true"></i> Page Visibility</a></h2>
-                <p>DESCRIPTION</p>
+                <p>Determines if the current browser tab is visible to the user.</p>
             </div>
 
             <div class="card">
                 <h2><a href="examples/11-background-fetch/background-fetch.html"><i class="fa fa-download" aria-hidden="true"></i> Background Fetch API</a></h2>
-                <p>DESCRIPTION</p>
+                <p>Allows large or long-running downloads to run in the background.</p>
             </div>
 
             <div class="card">
@@ -78,7 +78,7 @@
 
             <div class="card">
                 <h2><a href="examples/13-indexdb/indexdb.html"><i class="fa fa-database" aria-hidden="true"></i> IndexDB API</a></h2>
-                <p>DESCRIPTION</p>
+                <p>Provides a transactional database for storing large amounts of structured data on the client.</p>
             </div>
 
 
