Added Service Worker distinction to Web Worker page.

--- a/examples/06-webworkers/webworkers.html
+++ b/examples/06-webworkers/webworkers.html
@@ -25,6 +25,9 @@
                 <h2>Why should you use <span class="mono">Web Workers</span>?</h2>
                 <p>Long-running code that may interfere with the browser's main thread (UI, etc.) can be moved to a web worker.</p>
 
+                <h2>What about <span class="mono">Service Workers</span>?</h2>
+                <p>Web Workers provide background processes that execute in a separate thread. <em>Service Workers</em> provide functionality between a JavaScript app and the network. This allows inbound and outbound web requests to be intercepted by a service worker and handled as needed (think offline functionality or request modification).<p>
+
             </div>
 
             <div class="card">
