Stubbed out app side of Background fetch.

--- a/examples/11-background-fetch/background-fetch.html
+++ b/examples/11-background-fetch/background-fetch.html
@@ -29,10 +29,10 @@
 
             <div class="card">
 
-                <h2>Demo: download several files in the background</h2>
+                <h2>Demo: download files in the background</h2>
 
                 <button type="button" onclick="Demo.BackgroundFetch.downloadFiles()">Download Files</button>
-                <p>Download several files and notify when they are done.</p>
+                <p>Download several image files in the background.</p>
                 
             </div>
 
