Added updated browser support to BackgroundFetch page.

--- a/examples/11-background-fetch/background-fetch.html
+++ b/examples/11-background-fetch/background-fetch.html
@@ -28,6 +28,14 @@
             </div>
 
             <div class="card">
+                <h2>Permission Required?</h2>
+                <p>No.</p>
+
+                <h2>Browser Support</h2>
+                <p class="browser-support"><img src="../base/icons/bad.svg" alt="Poor browser support." /><span>Poor</span> - <a href="https://developer.mozilla.org/en-US/docs/Web/API/Background_Fetch_API#browser_compatibility" target="_blank">Supported Browsers on MDN</a></p>
+            </div>
+
+            <div class="card">
 
                 <h2>Demo: download files in the background</h2>
 
