Functional gamepad input.

--- a/examples/09-gamepad/gamepad.html
+++ b/examples/09-gamepad/gamepad.html
@@ -37,9 +37,9 @@
 
             <div class="card">
 
-                <h2>Demo: </h2>
+                <h2>Demo: view controller input</h2>
 
-                <button type="button" onclick="">DEMO_ACTION</button>
+                <button type="button" onclick="Demo.Gamepad.viewInput();">DEMO_ACTION</button>
                 <p>DESCRIPTION</p>
                 
             </div>
