Finished implementation of Xbox controller demo.

--- a/examples/09-gamepad/gamepad.html
+++ b/examples/09-gamepad/gamepad.html
@@ -38,36 +38,36 @@
             <div class="card">
 
                 <h2>Demo: view controller input</h2>
-
+<!--
                 <button type="button" onclick="Demo.Gamepad.viewInput();">DEMO_ACTION</button>
                 <p>DESCRIPTION</p>
-
+-->
                 <ul class="controller">
-                    <li>Button 0: <span id="Button_0" class="input-display"></span></li>
-                    <li>Button 1: <span id="Button_1" class="input-display"></span></li>
-                    <li>Button 2: <span id="Button_2" class="input-display"></span></li>
-                    <li>Button 3: <span id="Button_3" class="input-display"></span></li>
-                    <li>Button 4: <span id="Button_4" class="input-display"></span></li>
-                    <li>Button 5: <span id="Button_5" class="input-display"></span></li>
-                    <li>Button 6: <span id="Button_6" class="input-display"></span></li>
-                    <li>Button 7: <span id="Button_7" class="input-display"></span></li>
-                    <li>Button 8: <span id="Button_8" class="input-display"></span></li>
-                    <li>Button 9: <span id="Button_9" class="input-display"></span></li>
-                    <li>Button 10: <span id="Button_10" class="input-display"></span></li>
-                    <li>Button 11: <span id="Button_11" class="input-display"></span></li>
-                    <li>Button 12: <span id="Button_12" class="input-display"></span></li>
-                    <li>Button 13: <span id="Button_13" class="input-display"></span></li>
-                    <li>Button 14: <span id="Button_14" class="input-display"></span></li>
-                    <li>Button 15: <span id="Button_15" class="input-display"></span></li>
-                    <li>Button 16: <span id="Button_16" class="input-display"></span></li>
-                    <li>Button 17: <span id="Button_17" class="input-display"></span></li>
+                    <li>Button 0 (A): <span id="Button_0" class="input-display"></span></li>
+                    <li>Button 1 (B): <span id="Button_1" class="input-display"></span></li>
+                    <li>Button 2 (X): <span id="Button_2" class="input-display"></span></li>
+                    <li>Button 3 (Y): <span id="Button_3" class="input-display"></span></li>
+                    <li>Button 4 (LB): <span id="Button_4" class="input-display"></span></li>
+                    <li>Button 5 (RB): <span id="Button_5" class="input-display"></span></li>
+                    <li>Button 6 (LT): <span id="Button_6" class="input-display"></span></li>
+                    <li>Button 7 (RT): <span id="Button_7" class="input-display"></span></li>
+                    <li>Button 8 (Sel): <span id="Button_8" class="input-display"></span></li>
+                    <li>Button 9 (Strt): <span id="Button_9" class="input-display"></span></li>
+                    <li>Button 10 (LS): <span id="Button_10" class="input-display"></span></li>
+                    <li>Button 11 (RS): <span id="Button_11" class="input-display"></span></li>
+                    <li>Button 12 (D-UP): <span id="Button_12" class="input-display"></span></li>
+                    <li>Button 13 (D-DN): <span id="Button_13" class="input-display"></span></li>
+                    <li>Button 14 (D-LFT): <span id="Button_14" class="input-display"></span></li>
+                    <li>Button 15 (D-RGT): <span id="Button_15" class="input-display"></span></li>
+                    <li>Button 16 (XBOX): <span id="Button_16" class="input-display"></span></li>
+                    <li>Button 17 (Share): <span id="Button_17" class="input-display"></span></li>
                 </ul>
 
                 <ul class="controller">
                     <li>Axis 0: <span id="Axis_0" class="input-display"></span></li>
                     <li>Axis 1: <span id="Axis_1" class="input-display"></span></li>
                     <li>Axis 2: <span id="Axis_2" class="input-display"></span></li>
-                    <li>Axis 3: <span id="Axis_2" class="input-display"></span></li>
+                    <li>Axis 3: <span id="Axis_3" class="input-display"></span></li>
                 </ul>
                 
             </div>
